<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">exportando</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_button">Login</string>
    <string name="password">Password</string>
    <string name="exit_button">Salir</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="Caja">Caja: </string>
    <string name="Compra">Compra</string>
    <string name="Orden">Orden</string>
    <string name="Recibido">Recibido </string>
    <string name="Fecha">Fecha </string>
    <string name="Serial">Serial: </string>
    <string name="Entrega">Entrega </string>
    <string name="Lleno">Lleno: </string>
    <string name="Cantidad">Cantidad</string>
    <string name="Unidades">Unidades</string>
    <string name="Locacion">Locación</string>
    <string name="Recepcion">Recepción </string>
    <string name="Empleado">Empleado </string>
    <string name="Observaciones">Observaciones </string>
    <string name="Verificada">Verificada </string>
    <string name="Cancelar">Cancelar </string>
    <string name="MermaHeader">Razón de perdida</string>
    <string name="storageEntranceButton">Registrar</string>
    <string name="PrimeraEntrada">Primera Entrada</string>
    <string name="CrearOrden">Crear \nOrden</string>
    <string name="ProductoOrden">Agregar Producto a Orden</string>
    <string name="CantidadOrden">Cantidad</string>
    <string name="Mermas">Mermas</string>
    <string name="AgregarOrderCode">Agregar\nProducto</string>
    <string name="CancelarOrden">Cancelar Orden</string>
    <string name="Atender">Atender</string>
    <string name="Borrar">X</string>
    <string name="AlmacenListo">Producto \nListo</string>
    <string name="ProductoNombre">Producto:</string>
    <string name="Disponibles">Disponibles:</string>
    <string name="ConfirmarOrden">Confirmar\nOrden</string>
    <string name="BorrarProducto">Borrar Producto </string>
    <string name="ConfirmaBorrarProducto">Seguro de borrar este prroducto?</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="RecepcionCompra">Recepción de Compra</string>
    <string name="ConfirmaRecepcionCompra">Seguro de registrar esta compra?</string>
    <string name="title_activity_actividad_repartidor">ActividadRepartidor</string>
    <string name="title_activity_actividad_jefe_almacen">ActividadJefeAlmacen</string>
    <string name="title_activity_actividadefe_almacen">ActividadefeAlmacen</string>
    <string name="title_activity_actividad_almacenista">ActividadAlmacenista</string>
    <string name="title_activity_acticvidad_almacenista">ActicvidadAlmacenista</string>
    <string name="title_activity_storage_entrance">StorageEntrance</string>

    <color name="gray">#eaeaea</color>
    <color name="Texto_2">#000</color>
    <color name="Boton">#5890FF</color>
    <color name="Fondo">#ff1e63b5</color>
    <color name="Texto_1">#FFF</color>
    <color name="Cancel_1">#F55</color>

    <string name="ingresaconQR">Ingresar con Tarjeta</string>
    <string name="ingresamanual">Ingresar con datos</string>
    <string name="title_activity_leer_qr">LeerQR</string>
    <string name="title_activity_leer_qr_prodcuto">LeerQR_prodcuto</string>
    <string name="title_activity_storage">StorageActivity</string>
    <string name="title_activity_product_delivery">ProductDelivery</string>
    <string name="title_activity_product_reception">ProductReception</string>
    <string name="title_activity_entrance_and_ready">EntranceAndReady</string>
    <string name="title_activity_storage_ready">StorageReady</string>
    <string name="title_activity_dealer">DealerActivity</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
    <string name="title_activity_loss">LossActivity</string>
    <string name="title_activity_order_code">OrderCodeActivity</string>
    <string name="title_activity_loss_verification">LossVerificationActivity</string>

</resources>
