<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:padding="10dp"
    tools:context="com.empresa.oscar.exportando.OrderCodeActivity"
    android:background="@color/Fondo"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_weight="1">
        <TextView
            android:id="@+id/title"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Texto_1"
            android:layout_centerHorizontal="true"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>
    <ListView
        android:id="@+id/ordercodes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="28">
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:layout_weight="1">
        <Button
            android:id="@+id/agregar_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="2sp"
            android:textStyle="bold"
            android:textColor="@color/Texto_1"
            android:textSize="22sp"
            android:layout_weight="1"
            android:text="@string/AgregarOrderCode"
            android:background="@color/Boton"/>
        <Button
            android:id="@+id/confirmar_orden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="2sp"
            android:textStyle="bold"
            android:textColor="@color/Texto_1"
            android:textSize="22sp"
            android:layout_weight="1"
            android:text="@string/ConfirmarOrden"
            android:background="@color/Boton"/>
        </LinearLayout>

    <Button
        android:id="@+id/cancelar_orden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:textStyle="bold"
        android:textColor="@color/Texto_1"
        android:textSize="25sp"
        android:text="@string/CancelarOrden"
        android:background="@color/Cancel_1"/>

</LinearLayout>
