<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/Fondo"
    android:orientation="vertical"
    tools:context="com.empresa.oscar.exportando.StorageActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_weight="3">
        <TextView
            android:id="@+id/title"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Texto_1"
            android:layout_centerHorizontal="true"
            android:textSize="42sp"
            android:textStyle="bold"
            android:inputType="number"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:id="@+id/valuesLoss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/lossHeaders"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/orderHeader"
                    android:text="@string/Orden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/unitiesHeader"
                    android:text="@string/Unidades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/employeeHeader"
                    android:text="@string/Empleado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/locationHeader"
                    android:text="@string/Locacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/dateHeader"
                    android:text="@string/Fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/lossValues"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/orderValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:paddingTop="10dp"/>
                <TextView
                    android:id="@+id/unitiesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:paddingTop="10dp"/>
                <TextView
                    android:id="@+id/employeeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:paddingTop="10dp"/>
                <TextView
                    android:id="@+id/locationValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:paddingTop="10dp"/>
                <TextView
                    android:id="@+id/dateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Texto_1"
                    android:textSize="24sp"
                    android:paddingTop="10dp"/>

                </LinearLayout>



        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/lossHeader"
            android:text="@string/MermaHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Texto_1"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Boton"
            android:layout_margin="5dp"
            android:layout_marginBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/verified"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/Verificada"
                android:textStyle="bold"
                android:textColor="@color/Texto_1"
                android:background="@color/Boton"
                android:layout_weight="2"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/canceled"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/Cancelar"
                android:textStyle="bold"
                android:textColor="@color/Texto_1"
                android:background="@color/Cancel_1"
                android:layout_weight="2"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>


