<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/Fondo"
    android:orientation="vertical"
    tools:context="com.empresa.oscar.exportando.StorageActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_weight="1">
        <TextView
            android:id="@+id/title"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Texto_1"
            android:layout_centerHorizontal="true"
            android:textSize="42dp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_weight="1">
        <Button
            android:id="@+id/primera_entrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/Texto_1"
            android:text="@string/PrimeraEntrada"
            android:background="@color/Boton"/>
        <Button
            android:id="@+id/producto_listo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/Texto_1"
            android:textSize="25dp"
            android:text="@string/AlmacenListo"
            android:background="@color/Boton"/>

    </LinearLayout>




</LinearLayout>
