<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/Fondo">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_weight="1">
        <TextView
            android:id="@+id/title"
            android:text="@string/ProductoOrden"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Texto_1"
            android:layout_centerHorizontal="true"
            android:textSize="26sp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:id="@+id/layoutSerial"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/title">
            <TextView
                android:id="@+id/SerialHeader"
                android:text="@string/Serial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/Texto_1"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/SerialValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/Texto_1"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutProducto"
            android:layout_below="@id/layoutSerial"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/ProductoHeader"
                android:text="@string/ProductoNombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_1"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/ProductoValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_1"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginTop="5dp"/>
            </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDisponible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layoutProducto">

            <TextView
                android:id="@+id/DisponiblesHeader"
                android:text="@string/Disponibles"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/Texto_1"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/DisponiblesValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/Texto_1"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            </LinearLayout>

    </RelativeLayout>


    <EditText
        android:id="@+id/order_amount"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/Texto_1"
        android:hint="@string/CantidadOrden" />

</LinearLayout>