<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/Fondo"
    tools:context="com.empresa.oscar.exportando.StorageEntrance">
    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Texto_1"
        android:layout_centerHorizontal="true"
        android:textSize="42dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Texto_1"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"/>
<RelativeLayout
    android:id="@+id/valuesCompra"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/user"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/id_compra"
        android:text="@string/Compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Texto_1"
        android:textSize="28dp"
        android:layout_marginTop="0dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/id_compra_value"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Texto_1"
        android:layout_centerHorizontal="true"
        android:textSize="28dp"

        android:layout_toRightOf="@id/id_compra"
        android:textStyle="bold"/>
</RelativeLayout>
    <RelativeLayout
        android:id="@+id/valuesCaja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/valuesCompra"
        android:layout_centerHorizontal="true">
    <TextView
        android:id="@+id/caja"
        android:text="@string/Caja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Texto_1"
        android:textSize="28dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/caja_value"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Texto_1"
        android:textSize="28dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/caja"
        android:textStyle="bold"/>
</RelativeLayout>
    <RelativeLayout
        android:id="@+id/Serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/valuesCaja"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/serial"
            android:text="@string/Serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Texto_1"
            android:textSize="28dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/serial_value"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Texto_1"
            android:textSize="12dp"
            android:layout_marginTop="24dp"
            android:layout_toRightOf="@id/serial"
            android:textStyle="normal"/>
    </RelativeLayout>

    <Button
        android:id="@+id/postEntrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Texto_1"
        android:textSize="25dp"
        android:text="@string/storageEntranceButton"
        android:background="@color/Boton"
        android:padding="12dp"
        android:width="200dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/amount"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Texto_2"
        android:textSize="28dp"
        android:background="@color/Texto_1"
        android:padding="5dp"
        android:width="200dp"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/postEntrance"
        android:layout_alignStart="@+id/postEntrance" />






</RelativeLayout>
