<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/Fondo"
    android:orientation="vertical"
    tools:context="com.empresa.oscar.exportando.StorageActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_weight="5">
        <TextView
            android:id="@+id/title"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Texto_1"
            android:layout_centerHorizontal="true"
            android:textSize="42dp"
            android:inputType="number"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>
        <RelativeLayout
            android:id="@+id/valuesCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/id_compra"
                android:text="@string/Compra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_1"
                android:textSize="28dp"
                android:layout_marginTop="0dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/id_compra_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_1"
                android:layout_centerHorizontal="true"
                android:textSize="28dp"
                android:layout_toRightOf="@id/id_compra"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/valuesCaja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/valuesCompra"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/caja"
                android:text="@string/Caja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_1"
                android:textSize="28dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/caja_value"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_1"
                android:textSize="28dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/caja"
                android:textStyle="bold"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="20dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/amount_header"
            android:text="@string/Cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Texto_1"
            android:layout_gravity="left"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/amount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_2"
                android:textSize="28sp"
                android:background="@color/Texto_1"
                android:padding="5dp"
                android:width="200dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                />
            <Button
                android:id="@+id/recepcion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textColor="@color/Texto_1"
                android:textSize="18sp"
                android:text="@string/Recepcion"
                android:background="@color/Boton"
                />
            </LinearLayout>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@color/Boton"
            android:layout_marginBottom="10dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/lleno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Texto_1"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/lleno_header"
                android:text="@string/Lleno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_1"
                android:layout_gravity="left"
                android:textSize="28dp"
                android:gravity="end"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/lleno"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>

